# octothorpe

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-preferences.mjs
src/: App.svelte  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/commands/: documents.rs  edit.rs  mod.rs  preferences.rs  system.rs  vault.rs
src-tauri/src/core/: mod.rs  model.rs  tags.rs  vault.rs
src-tauri/src/core/index/: db.rs  migrations.rs  mod.rs  query.rs  scan.rs
src-tauri/src/core/markdown/: mod.rs
src-tauri/src/core/storage/: document.rs
src/lib/: dragdrop.ts
src/lib/components/: ActivityBar.svelte  ContextMenu.svelte  FileTree.svelte  InsertTableModal.svelte  MenuBar.svelte  Outline.svelte  Panel.svelte  PreferencesModal.svelte  Search.svelte  Sidebar.svelte  StatusBar.svelte  TagTree.svelte  contextMenuIcons.ts
src/lib/dev/: mockSeed.ts
src/lib/editor/: EditorHost.svelte  emoji.ts  htmlComplete.ts  markdownExtensions.ts  markdownLang.ts  setup.ts
src/lib/editor/commands/: block.ts  blockState.ts  code.ts  heading.ts  index.ts  inline.ts  list.ts  table.ts  util.ts
src/lib/editor/html/: paths.ts  render.ts
src/lib/editor/livePreview/: TableWidget.ts  build.ts  cellEditor.ts  cellRender.ts  config.ts  emojiWidget.ts  footnoteTooltip.ts  footnoteWidget.ts  footnotes.ts  htmlBlockField.ts  htmlWidgets.ts  index.ts  inlineHtml.ts  linkNav.ts  linkRefs.ts  mathField.ts  mathTooltip.ts  mathWidgets.ts  mermaidField.ts  mermaidWidgets.ts  modNav.ts  reveal.ts  tableField.ts  tagScan.ts  widgets.ts
src/lib/editor/math/: fonts.ts  lang.ts  mathMarkdown.ts  mathjax.ts  render.ts
src/lib/ipc/: commands.ts  types.ts
src/lib/preferences/: paths.ts  store.svelte.ts  types.ts  validate.ts
src/lib/stores/: contextMenu.svelte.ts  ui.svelte.ts  workspace.svelte.ts
src/styles/: global.css
(+4 files in other folders)
