[package]
name = "typedown"
version = "0.1.0"
description = "A Typora-like Markdown editor with document management"
authors = ["Menghua Xiao"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "typedown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
sha2 = "0.10"
pulldown-cmark = { version = "0.12", default-features = false }
