[package]
name = "octothorpe"
version = "0.1.0"
description = "A Typora-like Markdown editor with document management"
authors = ["Menghua Xiao"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "octothorpe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
sha2 = "0.10"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
notify = "6"
notify-debouncer-full = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
